done docker compose

--- a/mysql/Dockerfile
+++ b/mysql/Dockerfile
@@ -1,4 +1,4 @@
-FROM mysql
-ENV MYSQL_ROOT_PASSWORD root
+FROM mysql:latest
+# ENV MYSQL_ROOT_PASSWORD psw123
 ADD ./init_db /docker-entrypoint-initdb.d
-EXPOSE 3306
+# EXPOSE 3306
