--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,22 @@
 version: "3.9"
 services:
-  web:
+  mysql:
+    build: ./mysql/
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: tiki
+    ports:
+      - "6603:3306"
+
+  app_craw_con:
     build: .
+    environment:
+      MYSQL_HOST: mysql
+      MYSQL_USER: root
+      MYSQL_PASSWORD: root
+      MYSQL_DATABASE: tiki
     ports:
       - "8000:8000"
+    depends_on:
+      - mysql
